# arrowDB

./: .clangd  .gitignore  CMakeLists.txt  README.md  convo.txt  search
benchmarks/: bench_hnsw.cpp
embed/: Cargo.toml  build.rs  cbindgen.toml
embed/include/: arrow_embed.h
embed/src/: lib.rs  main.rs
genembeddings/: embed.py  pyproject.toml
include/arrow/: arrow.h  collection.h  db.h  hnsw_index.h  options.h  search.h  types.h  wal.h
include/arrow/utils/: binary.h  crc32.h  filesync.h  result.h  status.h  utils.h
includes/: arrow_utils.h  arrowdb.h  flat_search.h  utils.h  vdb.h  vector_store.h
includes/arrow/: collection.h  flat_search.h  hnsw_index.h  misc_utils.h  types.h  utils.h  vector_store.h  wal.h
src/: main.cpp
src/cli/: args.h  main.cpp
src/cli/commands/: ingest.h  search.h
src/core/: collection.cpp  db.cpp  wal.cpp
src/embedder/: embedder.cpp  embedder.h
src/index/: hnsw_index.cpp
src/internal/: crc32.h  filesync.h  hnsw_index.h  wal.h
tests/: binary_test.cpp  collection_test.cpp  db_test.cpp  hnsw_index_test.cpp  metadata_test.cpp  sift_test.cpp  test_hnsw_index.cpp  test_util.h  test_vector_store.cpp  wal_test.cpp
tools/genembeddings/: embed.py  export_model.py  pyproject.toml  query.py
