[project]
name = "genembeddings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.2",
    "nltk>=3.9.2",
    "numpy>=2.4.0",
    "onnx>=1.20.1",
    "onnxruntime>=1.23.2",
    "onnxscript>=0.5.7",
    "optimum>=2.1.0",
    "sentence-transformers>=5.2.0",
    "torch>=2.9.1",
]
